--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                         <a class="nav-link active" href="/">首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.dalao.pro/">博客</a>
+                        <a class="nav-link" href="https://github.com/chentianqihub/imgdalao/">项目地址</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">关于</a>
@@ -67,8 +67,7 @@
 
     <footer class="footer">
         <div class="container text-center">
-            <p class="text-muted">Copyright Ⓒ 2023 All rights reserved. 请勿上传违反中国法律的图片，违者后果自负。 
-            本站搭建由<a href="https://www.dalao.pro" target="_blank" >大佬博客</a>搭建维护</p>           
+            <p class="text-muted">Copyright Ⓒ 2023 All rights reserved. 请勿上传违反中国法律的图片，违者后果自负           
         </div>
     </footer>
 
