--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link active" href="/">首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.dalao.pro/">博客</a>
+                        <a class="nav-link" href="https://github.com/chentianqihub/imgdalao">项目地址</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">关于</a>
